# gato_cuda_learning_path

./: CMakeLists.txt  README.md  package.xml
include/gato_cuda_learning_path/: cuda_utils.hpp
scripts/: lesson17_pose_comparison.csv  plot_lesson17_results.py
src/: lesson01_parallel_threads.cu  lesson02_memory_flow.cu  lesson03_parallel_reduction.cu  lesson04_cublas_gemm.cu  lesson05_custom_linear_algebra.cu  lesson06_optimizer_step.cu  lesson07_batched_optimizer_skeleton.cu  lesson08_matrix_basics.cu  lesson09_matrix_vector_ops.cu  lesson10_matrix_mul_cpu_vs_gpu.cu  lesson11_matmul_all_comparison.cu  lesson12_cublas_control_optimization_examples.cu  lesson13_dense_linear_systems_ic_cpu_vs_gpu.cu  lesson14_quadrotor_nonlinear_batch_cpu_vs_gpu.cu  lesson15_icp_pose_estimation_custom_solver_cpu_vs_gpu.cu  lesson16_icp_pose_estimation_ceres_cpu_vs_custom_cpu_vs_gpu.cu  lesson17_rosbag_lidar_icp_ceres_cpu_vs_custom_cpu_vs_gpu.cu
