<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gato_cuda_learning_path</name>
  <version>0.1.0</version>
  <description>Progressive CUDA learning path from basics to GATO-style optimizer building blocks.</description>
  <maintainer email="lfrecalde1@espe.edu.ec">fer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
